Fix #126013: Geometry nodes PLY import node skips attributes

Just turn on the option for geometry nodes where attributes are
generally expected to be used. We could expose this and other
options at some point too but that requires a bit more thought.